// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitHubActionsGeneratorAdapter - Integration Tests > generateDocumentation > should generate complete documentation for a GitHub Action > github-action-documentation 1`] = `
"<!-- header:start -->
<div align="center">
  # ![Icon](data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0IiBmaWxsPSJub25lIiBzdHJva2U9ImN1cnJlbnRDb2xvciIgc3Ryb2tlLXdpZHRoPSIyIiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiIGNsYXNzPSJmZWF0aGVyIGZlYXRoZXItdXBsb2FkLWNsb3VkIiBjb2xvcj0iYmx1ZSI+PHBvbHlsaW5lIHBvaW50cz0iMTYgMTYgMTIgMTIgOCAxNiI+PC9wb2x5bGluZT48bGluZSB4MT0iMTIiIHkxPSIxMiIgeDI9IjEyIiB5Mj0iMjEiPjwvbGluZT48cGF0aCBkPSJNMjAuMzkgMTguMzlBNSA1IDAgMCAwIDE4IDloLTEuMjZBOCA4IDAgMSAwIDMgMTYuMyI+PC9wYXRoPjxwb2x5bGluZSBwb2ludHM9IjE2IDE2IDEyIDEyIDggMTYiPjwvcG9seWxpbmU+PC9zdmc+) GitHub Action: Build and Deploy
</div>

<!-- header:end -->
<!-- badges:start -->
[![Marketplace](https://img.shields.io/badge/Marketplace-build--and--deploy-blue?logo=github-actions)](https://github.com/marketplace/actions/build-and-deploy)
[![Release](https://img.shields.io/github/v/release/hoverkraft-tech/ci-dokumentor)](https://github.com/hoverkraft-tech/ci-dokumentor/releases)
[![License](https://img.shields.io/github/license/hoverkraft-tech/ci-dokumentor)](https://img.shields.io/github/license/hoverkraft-tech/ci-dokumentor)
[![Stars](https://img.shields.io/github/stars/hoverkraft-tech/ci-dokumentor?style=social)](https://img.shields.io/github/stars/hoverkraft-tech/ci-dokumentor?style=social)

<!-- badges:end -->
<!-- overview:start -->
## Overview

Builds the application and deploys it to the specified environment

<!-- overview:end -->
<!-- usage:start -->
## Usage

\`\`\`yaml
- uses: hoverkraft-tech/ci-dokumentor/test@sha-version
  with:
    # Target environment (staging, production)
    # This input is required.
    environment: ""

    # Version to deploy
    # Default: \`latest\`
    version: latest

    # Run in dry-run mode
    # Default: \`false\`
    dry-run: "false"

    # Path to configuration file
    # Default: \`config/deploy.yml\`
    config-file: config/deploy.yml

\`\`\`

<!-- usage:end -->
<!-- inputs:start -->
## Inputs

| **Input** | **Description** | **Required** | **Default** |
| --- | --- | --- | --- |
| **\`environment\`** | Target environment (staging, production) | **true** | \`\` |
| **\`version\`** | Version to deploy | **false** | \`latest\` |
| **\`dry-run\`** | Run in dry-run mode | **false** | \`false\` |
| **\`config-file\`** | Path to configuration file | **false** | \`config/deploy.yml\` |

<!-- inputs:end -->
<!-- outputs:start -->
## Outputs

| **Output** | **Description** |
| --- | --- |
| **\`deployment-url\`** | URL of the deployed application |
| **\`build-artifacts\`** | Path to build artifacts |
| **\`deployment-status\`** | Status of the deployment (success/failure) |

<!-- outputs:end -->
<!-- secrets:start -->
<!-- secrets:end -->
<!-- contributing:start -->
<!-- contributing:end -->
<!-- license:start -->
<!-- license:end -->
<!-- generated:start -->
This documentation was automatically generated by [CI Dokumentor](https://github.com/hoverkraft-tech/ci-dokumentor).

<!-- generated:end -->
"
`;

exports[`GitHubActionsGeneratorAdapter - Integration Tests > generateDocumentation > should generate documentation for a CI/CD workflow > workflow-documentation 1`] = `
"<!-- header:start -->
<div align="center">
  # GitHub Workflow: CI/CD Pipeline
</div>

<!-- header:end -->
<!-- badges:start -->
[![Release](https://img.shields.io/github/v/release/hoverkraft-tech/ci-dokumentor)](https://github.com/hoverkraft-tech/ci-dokumentor/releases)
[![License](https://img.shields.io/github/license/hoverkraft-tech/ci-dokumentor)](https://img.shields.io/github/license/hoverkraft-tech/ci-dokumentor)
[![Stars](https://img.shields.io/github/stars/hoverkraft-tech/ci-dokumentor?style=social)](https://img.shields.io/github/stars/hoverkraft-tech/ci-dokumentor?style=social)

<!-- badges:end -->
<!-- overview:start -->
<!-- overview:end -->
<!-- usage:start -->
## Usage

\`\`\`yaml
name: CI/CD Pipeline
on:
  push:
    branches:
      - main
      - develop
  pull_request:
    branches:
      - main
  schedule:
    - cron: 0 2 * * 1
jobs:
  ci-cd.yml:
    uses: hoverkraft-tech/ci-dokumentor/test/.github/workflows/ci-cd.yml@sha-version
    secrets:
      # GitHub token for authentication
      github-token: ""
    with:
      # Deployment environment
      # This input is required.
      # Default: \`staging\`
      environment: staging

\`\`\`

<!-- usage:end -->
<!-- inputs:start -->
## Inputs

### Workflow Call Inputs

| **Input** | **Description** | **Required** | **Type** | **Default** |
| --- | --- | --- | --- | --- |
| **\`environment\`** | Deployment environment | **true** | **string** | \`staging\` |

<!-- inputs:end -->
<!-- outputs:start -->
## Outputs

| **Output** | **Description** |
| --- | --- |
| **\`deployment-url\`** | URL of the deployed application |

<!-- outputs:end -->
<!-- secrets:start -->
## Secrets

| **Secret** | **Description** | **Required** |
| --- | --- | --- |
| **\`github-token\`** | GitHub token for authentication | **false** |

<!-- secrets:end -->
<!-- contributing:start -->
<!-- contributing:end -->
<!-- license:start -->
<!-- license:end -->
<!-- generated:start -->
This documentation was automatically generated by [CI Dokumentor](https://github.com/hoverkraft-tech/ci-dokumentor).

<!-- generated:end -->
"
`;
